--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -29,7 +29,7 @@
             </div>
             <div class ="flexhead">
             <a href="../HTML/cart.html">
-            <img src="../Images/orange-cart%20optimized.png" width="100px" height="90px">
+            <img src="../IMAGES/orange-cart%20optimized.png" width="100px" height="90px">
             </a>
             </div>
             
@@ -81,3 +81,4 @@
     
     </body>
 </html>
+
